--- a/MES/Views/CommonBOMView.xaml
+++ b/MES/Views/CommonBOMView.xaml
@@ -23,8 +23,7 @@
             <dxe:ButtonEdit 
                 Name="PART_Editor"
                 EditValue="{Binding RowData.Row.CItemCode}"
-                IsTextEditable="False"
-                IsReadOnly="{DXBinding !View.DataContext.IsNew}">
+                IsTextEditable="False">
                 <dxmvvm:Interaction.Behaviors>
                     <dxmvvm:EventToCommand EventName="DefaultButtonClick" Command="{Binding View.DataContext.ShowDialogCmd}" CommandParameter="{Binding ElementName=view}" />
                 </dxmvvm:Interaction.Behaviors>
@@ -62,7 +61,7 @@
                             </dxb:BarButtonItem>
                             <dxb:BarButtonItem Content="추가" KeyGesture="CTRL+N" Command="{Binding AddCmd}" CommandParameter="{Binding ElementName=grid}" LargeGlyph="{dx:DXImage SvgImages/Outlook Inspired/AddFile.svg}" />
                             <dxb:BarButtonItem Content="삭제" KeyGesture="CTRL+D" Command="{Binding DeleteCmd}" LargeGlyph="{dx:DXImage SvgImages/Snap/SnapDeleteList.svg}" />
-                            <dxb:BarButtonItem Content="검색" KeyGesture="F5" Command="{Binding SearchCmd}" LargeGlyph="{dx:DXImage SvgImages/Spreadsheet/Zoom.svg}" />
+                            <dxb:BarButtonItem Content="검색" KeyGesture="F5" Command="{Binding SearchCmd}" LargeGlyph="{dx:DXImage SvgImages/Spreadsheet/Zoom.svg}" CommandParameter="{Binding ElementName=Direction}"/>
                         </dxr:RibbonPageGroup>
                         <dxr:RibbonPageGroup Caption="Find">
                             <dxb:BarEditItem Content="기준일 : " EditWidth="150" EditValue="{Binding CheckDate, UpdateSourceTrigger=PropertyChanged}" Margin="0 5 0 0">
@@ -101,12 +100,11 @@
                                     </DataTemplate>
                                 </dxb:BarEditItem.EditTemplate>
                             </dxb:BarEditItem>
-                            <dxb:BarEditItem>
+                            <dxb:BarEditItem x:Name="Direction" EditValue="{Binding Direction, UpdateSourceTrigger=Explicit}">
                                 <dxb:BarEditItem.EditTemplate>
                                     <DataTemplate>
                                         <dxe:ListBoxEdit
                                             x:Name="PART_Editor"
-                                            EditValue="{Binding DataContext.Direction, UpdateSourceTrigger=PropertyChanged, RelativeSource={RelativeSource AncestorType={x:Type dxb:LightweightBarItemLinkControl}}}"
                                             Height="48"
                                             Margin="0 5 0 0">
                                             <dxe:ListBoxEditItem Content="정전개" Margin="10,0" VerticalAlignment="Center"/>
