--- a/MES/Views/PopupSalesOrderDlvyView.xaml
+++ b/MES/Views/PopupSalesOrderDlvyView.xaml
@@ -63,15 +63,15 @@
             </Border>
             <dxe:TextEdit
                 Text="{Binding DnNo, UpdateSourceTrigger=PropertyChanged}"
-                Background="White"
+                VerticalAlignment="Bottom"
                 Grid.Row="0" 
-                Grid.Column="1" VerticalAlignment="Bottom" Margin="2 0 0 0">
+                Grid.Column="1"
+                Margin="2 0 0 0">
                 <dxe:TextEdit.InputBindings>
                     <KeyBinding Key="Enter" Command="{Binding SearchCmd}" />
                 </dxe:TextEdit.InputBindings>
             </dxe:TextEdit>
-            <dxe:DateEdit 
-                Background="White"
+            <dxe:DateEdit
                 Grid.Row="0" 
                 Grid.Column="4"
                 EditValue="{Binding StartDate, UpdateSourceTrigger=PropertyChanged}"
@@ -83,7 +83,6 @@
             </dxe:DateEdit>
             <TextBlock Grid.Row="0" Grid.Column="5" HorizontalAlignment="Center">~</TextBlock>
             <dxe:DateEdit
-                Background="White"
                 Grid.Row="0" 
                 Grid.Column="6"
                 EditValue="{Binding EndDate, UpdateSourceTrigger=PropertyChanged}"
@@ -103,7 +102,6 @@
                 Grid.Column="1"
                 ShowSizeGrip="False"
                 Margin="2 0 0 0"
-                Background="White"
                 VerticalAlignment="Bottom"
                 IsTextEditable="False"
                 AutoPopulateColumns="False"
@@ -133,11 +131,12 @@
             </dxg:LookUpEdit>
             <dxe:ComboBoxEdit 
                 Grid.Row="1"
-                Grid.Column="4" Grid.ColumnSpan="3"
+                Grid.Column="4"
+                Grid.ColumnSpan="3"
                 HorizontalAlignment="Stretch"
                 NullValueButtonPlacement="EditBox"
                 IsTextEditable="False"
-                Background="White"
+                VerticalAlignment="Bottom"
                 ItemsSource="{Binding OrderType}"
                 EditValue="{Binding SoType, UpdateSourceTrigger=PropertyChanged}"
                 Margin="2 0 0 0"
@@ -152,7 +151,7 @@
                 Grid.Column="1"
                 HorizontalAlignment="Stretch"
                 IsTextEditable="False"
-                Background="White"
+                VerticalAlignment="Bottom"
                 IsEnabled="False"
                 ItemsSource="{Binding FlagCollections}"
                 EditValue="{Binding PackingFlag, UpdateSourceTrigger=PropertyChanged}"
@@ -168,7 +167,8 @@
                 Grid.Column="4" Grid.ColumnSpan="2"
                 HorizontalAlignment="Stretch"
                 IsTextEditable="False"
-                Background="White" IsEnabled="{Binding IsEnabledPost}"
+                VerticalAlignment="Bottom"
+                IsEnabled="{Binding IsEnabledPost}"
                 ItemsSource="{Binding FlagCollections}"
                 EditValue="{Binding PostFlag, UpdateSourceTrigger=PropertyChanged}"
                 Margin="2 0 0 0"
@@ -186,6 +186,7 @@
             SelectedItem="{Binding SelectedHeader}"
             ClipboardCopyMode="ExcludeHeader"
             SelectionMode="Cell"
+            RowIndicatorNumberOnly="True"
             ShowLoadingPanel="{Binding IsBusy}">
             <dxmvvm:Interaction.Behaviors>
                 <dxmvvm:EventToCommand Command="{Binding ConfirmCmd}" EventName="MouseDoubleClick"/>
@@ -221,6 +222,7 @@
             ItemsSource="{Binding CollectionsDetail}"
             SelectionMode="Cell"
             ClipboardCopyMode="ExcludeHeader"
+            RowIndicatorNumberOnly="True"
             Margin="0 10 0 0">
             <!--<dxg:GridControl.Resources>
                 <ControlTemplate x:Key="{dxgt:GridControlThemeKey IsThemeIndependent=true, ResourceKey=BorderTemplate}" TargetType="{x:Type ContentControl}">
