--- a/MES/Views/SalesOrderReqView.xaml
+++ b/MES/Views/SalesOrderReqView.xaml
@@ -236,8 +236,10 @@
                         Text="{Binding Header.Memo}"
                         VerticalAlignment="Bottom"
                         IsEnabled="{Binding IsNew}"
-                        Margin="2 0 0 0" Background="White"
-                        Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2"/>
+                        Margin="2 0 0 0"
+                        Grid.Row="5"
+                        Grid.Column="1"
+                        Grid.ColumnSpan="2"/>
                 </Grid>
                 <custom:DSGridControl 
                     ItemsSource="{Binding Details}"
