--- a/MES/Views/Site/SalesOrderReqNLView.xaml
+++ b/MES/Views/Site/SalesOrderReqNLView.xaml
@@ -133,6 +133,8 @@
                         <RowDefinition/>
                         <RowDefinition/>
                         <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
                     </Grid.RowDefinitions>
                     <Border Grid.Row="0" Grid.Column="0">
                         <TextBlock>출하요청번호</TextBlock>
@@ -147,7 +149,13 @@
                         <TextBlock>담당자</TextBlock>
                     </Border>
                     <Border Grid.Row="4" Grid.Column="0">
+                        <TextBlock>수주번호</TextBlock>
+                    </Border>
+                    <Border Grid.Row="5" Grid.Column="0">
                         <TextBlock>비고</TextBlock>
+                    </Border>
+                    <Border Grid.Row="6" Grid.Column="0">
+                        <TextBlock>Mail Subject</TextBlock>
                     </Border>
                     <dxe:ButtonEdit 
                         Grid.Row="0" 
@@ -240,11 +248,27 @@
                         </dxg:LookUpEdit.PopupContentTemplate>
                     </dxg:LookUpEdit>
                     <dxe:TextEdit
+                        Text="{Binding Header.SoNo, UpdateSourceTrigger=PropertyChanged}"
+                        VerticalAlignment="Bottom"
+                        Margin="2 0 0 0"
+                        Grid.Row="4"
+                        Grid.Column="1"/>
+                    <dxe:TextEdit
                         Text="{Binding Header.Memo}"
                         VerticalAlignment="Bottom"
                         IsEnabled="{Binding IsNew}"
-                        Margin="2 0 0 0" Background="White"
-                        Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2"/>
+                        Margin="2 0 0 0"
+                        Grid.Row="5"
+                        Grid.Column="1"
+                        Grid.ColumnSpan="2"/>
+                    <dxe:TextEdit
+                        Text="{Binding Header.Remark2}"
+                        VerticalAlignment="Bottom"
+                        IsEnabled="{Binding IsNew}"
+                        Margin="2 0 0 0"
+                        Grid.Row="6"
+                        Grid.Column="1"
+                        Grid.ColumnSpan="2"/>
                 </Grid>
                 <custom:DSGridControl
                     ItemsSource="{Binding Details}"
